// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component Loading state renders a loading button 1`] = `
@keyframes sxwho2l {
  0% {
    opacity: 0;
  }

  30% {
    opacity: 1;
  }

  50% {
    opacity: 1;
  }

  80% {
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

.sx03kzeywt1o--css {
  opacity: 0;
  transition: opacity 150ms ease-out;
}

.sx2cs53 {
  display: flex;
}

.sx2cs53gu4h1--css {
  justify-content: center;
  opacity: 1;
  position: absolute;
  transition: opacity 150ms ease-out;
}

.sx0yv19 {
  animation-name: sxwho2l;
  animation-duration: 1s;
  animation-fill-mode: both;
  animation-iteration-count: infinite;
  animation-timing-function: linear;
  background-color: currentColor;
  border-radius: 100%;
}

.sx0yv19:nth-child(1) {
  animation-delay: -300ms;
}

.sx0yv19:nth-child(2) {
  animation-delay: -150ms;
}

.sx0yv19:nth-child(3) {
  animation-delay: 0;
}

.sx0yv194btw3--size-md {
  height: 6px;
  width: 6px;
}

.sx0yv194btw3--size-md {
  margin-left: 2px;
  margin-right: 2px;
}

.sxyl5fn {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-2);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
}

.sxyl5fn {
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
}

.sxyl5fn {
  white-space: nowrap;
  width: max-content;
}

.sxyl5fn[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxyl5fn2jpbs--isLoading-true {
  cursor: not-allowed;
  opacity: 0.5;
}

.sxyl5fnxyrog--comp {
  background-color: var(--colors-primary500);
  color: white;
}

.sxyl5fnxyrog--comp:not([disabled]):hover,
.sxyl5fnxyrog--comp:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxyl5fnxyrog--comp:active {
  background-color: var(--colors-primary500);
}

.sxyl5fnxyrog--comp[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

.sxyl5fn8heda--comp {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxyl5fn8heda--comp:not([disabled]):hover,
.sxyl5fn8heda--comp:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxyl5fn8heda--comp:active {
  color: var(--colors-primary500);
}

.sxyl5fn8heda--comp[disabled] {
  background-color: white;
  color: var(--colors-primary900);
}

.sxyl5fn08yia--comp {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-secondary500);
  background-color: white;
}

.sxyl5fn08yia--comp:not([disabled]):hover,
.sxyl5fn08yia--comp:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-secondary900);
  background-color: white;
}

.sxyl5fn08yia--comp:active {
  color: var(--colors-secondary500);
}

.sxyl5fn08yia--comp[disabled] {
  background-color: white;
  color: var(--colors-secondary900);
}

<div>
  <button
    class="sxyl5fn sxyl5fnxyrog--comp sxyl5fn03kze--theme-primary sxyl5fn03kze--appearance-solid sxyl5fn2jpbs--isLoading-true"
    type="button"
  >
    <div
      class="sx2cs53 sx2cs53gu4h1--css"
      role="alert"
    >
      <span
        data-radix-visually-hidden=""
        style="position: absolute; border: 0px; width: 1px; height: 1px; padding: 0px; margin: -1px; overflow: hidden; clip: rect(0px, 0px, 0px, 0px); white-space: nowrap; word-wrap: normal;"
      >
        Loading
      </span>
      <div
        class="sx0yv19 sx0yv194btw3--size-md"
      />
      <div
        class="sx0yv19 sx0yv194btw3--size-md"
      />
      <div
        class="sx0yv19 sx0yv194btw3--size-md"
      />
    </div>
    <span
      class="sx03kze sx03kzeywt1o--css"
    >
      BUTTON
    </span>
  </button>
</div>
`;

exports[`Button component renders a button 1`] = `
@keyframes sxwho2l {
  0% {
    opacity: 0;
  }

  30% {
    opacity: 1;
  }

  50% {
    opacity: 1;
  }

  80% {
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

.sxyl5fn {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-2);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
}

.sxyl5fn {
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
}

.sxyl5fn {
  white-space: nowrap;
  width: max-content;
}

.sxyl5fn[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxyl5fnxyrog--comp {
  background-color: var(--colors-primary500);
  color: white;
}

.sxyl5fnxyrog--comp:not([disabled]):hover,
.sxyl5fnxyrog--comp:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxyl5fnxyrog--comp:active {
  background-color: var(--colors-primary500);
}

.sxyl5fnxyrog--comp[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

<div>
  <button
    class="sxyl5fn sxyl5fnxyrog--comp sxyl5fn03kze--theme-primary sxyl5fn03kze--appearance-solid"
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a disabled button 1`] = `
@keyframes sxwho2l {
  0% {
    opacity: 0;
  }

  30% {
    opacity: 1;
  }

  50% {
    opacity: 1;
  }

  80% {
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

.sxyl5fn {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-2);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
}

.sxyl5fn {
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
}

.sxyl5fn {
  white-space: nowrap;
  width: max-content;
}

.sxyl5fn[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxyl5fnxyrog--comp {
  background-color: var(--colors-primary500);
  color: white;
}

.sxyl5fnxyrog--comp:not([disabled]):hover,
.sxyl5fnxyrog--comp:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxyl5fnxyrog--comp:active {
  background-color: var(--colors-primary500);
}

.sxyl5fnxyrog--comp[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

.sxyl5fn8heda--comp {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxyl5fn8heda--comp:not([disabled]):hover,
.sxyl5fn8heda--comp:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxyl5fn8heda--comp:active {
  color: var(--colors-primary500);
}

.sxyl5fn8heda--comp[disabled] {
  background-color: white;
  color: var(--colors-primary900);
}

<div>
  <button
    class="sxyl5fn sxyl5fnxyrog--comp sxyl5fn03kze--theme-primary sxyl5fn03kze--appearance-solid"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a disabled secondary outline button 1`] = `
@keyframes sxwho2l {
  0% {
    opacity: 0;
  }

  30% {
    opacity: 1;
  }

  50% {
    opacity: 1;
  }

  80% {
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

.sxyl5fn {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-2);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
}

.sxyl5fn {
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
}

.sxyl5fn {
  white-space: nowrap;
  width: max-content;
}

.sxyl5fn[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxyl5fnxyrog--comp {
  background-color: var(--colors-primary500);
  color: white;
}

.sxyl5fnxyrog--comp:not([disabled]):hover,
.sxyl5fnxyrog--comp:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxyl5fnxyrog--comp:active {
  background-color: var(--colors-primary500);
}

.sxyl5fnxyrog--comp[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

.sxyl5fn8heda--comp {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxyl5fn8heda--comp:not([disabled]):hover,
.sxyl5fn8heda--comp:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxyl5fn8heda--comp:active {
  color: var(--colors-primary500);
}

.sxyl5fn8heda--comp[disabled] {
  background-color: white;
  color: var(--colors-primary900);
}

.sxyl5fn08yia--comp {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-secondary500);
  background-color: white;
}

.sxyl5fn08yia--comp:not([disabled]):hover,
.sxyl5fn08yia--comp:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-secondary900);
  background-color: white;
}

.sxyl5fn08yia--comp:active {
  color: var(--colors-secondary500);
}

.sxyl5fn08yia--comp[disabled] {
  background-color: white;
  color: var(--colors-secondary900);
}

<div>
  <button
    class="sxyl5fn sxyl5fn08yia--comp sxyl5fn03kze--theme-secondary sxyl5fn03kze--appearance-outline"
    disabled=""
    type="button"
  >
    BUTTON
  </button>
</div>
`;

exports[`Button component renders a outline button 1`] = `
@keyframes sxwho2l {
  0% {
    opacity: 0;
  }

  30% {
    opacity: 1;
  }

  50% {
    opacity: 1;
  }

  80% {
    opacity: 0;
  }

  100% {
    opacity: 0;
  }
}

.sxyl5fn {
  background: unset;
  border: none;
  border-radius: var(--radii-0);
  cursor: pointer;
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: var(--fonts-sans);
  font-size: var(--fontSizes-md);
  font-weight: 500;
  height: var(--sizes-2);
  letter-spacing: 0.02em;
  line-height: 1.4;
  transition: all 125ms ease-out;
  text-decoration: none;
  padding-left: var(--space-4);
  padding-right: var(--space-4);
}

.sxyl5fn {
  padding-top: var(--space-2);
  padding-bottom: var(--space-2);
}

.sxyl5fn {
  white-space: nowrap;
  width: max-content;
}

.sxyl5fn[disabled] {
  opacity: 0.35;
  cursor: not-allowed;
}

.sxyl5fnxyrog--comp {
  background-color: var(--colors-primary500);
  color: white;
}

.sxyl5fnxyrog--comp:not([disabled]):hover,
.sxyl5fnxyrog--comp:not([disabled]):focus {
  background-color: var(--colors-primary900);
}

.sxyl5fnxyrog--comp:active {
  background-color: var(--colors-primary500);
}

.sxyl5fnxyrog--comp[disabled] {
  background-color: var(--colors-tonal300);
  color: var(--colors-tonal600);
}

.sxyl5fn8heda--comp {
  box-shadow: inset 0 0 0 2px;
  color: var(--colors-primary500);
  background-color: white;
}

.sxyl5fn8heda--comp:not([disabled]):hover,
.sxyl5fn8heda--comp:not([disabled]):focus {
  text-decoration: none;
  color: var(--colors-primary900);
  background-color: white;
}

.sxyl5fn8heda--comp:active {
  color: var(--colors-primary500);
}

.sxyl5fn8heda--comp[disabled] {
  background-color: white;
  color: var(--colors-primary900);
}

<div>
  <button
    class="sxyl5fn sxyl5fn8heda--comp sxyl5fn03kze--theme-primary sxyl5fn03kze--appearance-outline"
    type="button"
  >
    BUTTON
  </button>
</div>
`;
